--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!--Fabio -->
     <div class="container" id="fabio">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
           <h2 class="section-heading text-uppercase">DHDKey! A dataset of projects</h2>
           <hr>
           <h3 class="section-subheading mb-3">by Fabio Mariani</h3>
@@ -133,9 +133,9 @@
 
 
     <!--Martina -->
-    <div class="container" id="martina">
+    <div class="container project" id="martina">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
           <h2 class="section-heading text-uppercase">Philoeditor</h2>
           <hr>
           <h3 class="section-subheading mb-3">by Martina Dello Buono</h3>
@@ -153,7 +153,7 @@
     <!--Martina -->
     <div class="container" id="sebastian">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
           <h2 class="section-heading text-uppercase">Visualizing semantic digital editions: The case of Vespasiano da Bisticci's Letters</h2>
           <hr>
           <h3 class="section-subheading mb-3">by Sebastian Barzaghi</h3>
@@ -169,7 +169,7 @@
     <!--Valentina -->
     <div class="container" id="valentina">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
           <h2 class="section-heading text-uppercase">VASTO project, development of the application</h2>
           <hr>
           <h3 class="section-subheading mb-3">by Valentina Pasqual</h3>
