--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading text-uppercase">DHARC projects’ presentations</div>
+        <div class="intro-heading text-uppercase">/DH.arc projects’ presentations</div>
         <div class="intro-lead-in">Webinar for projects realized by DHDK students, now graduated, by using the DHDK grants for research activities.</div>
       </div>
     </div>
@@ -86,11 +86,10 @@
   <section class="page-section" id="about">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
           <h2 class="section-heading text-uppercase">The Webinar</h2>
-          <hr>
-          <h3 class="section-subheading mb-3">An opportunity to learn more about what is going on at Dh.arc</h3>
-          <p style="text-align:left;">Some information</p>
+          <h3 class="section-subheading mb-3">An opportunity to learn more about what is going on at /DH.arc</h3>
+          <p style="text-align:left;">Some information some information  some information some information some information some information some information some information some information</p>
 
         </div>
       </div>
