--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-heading text-uppercase">The Webinar</h2>
+          <h2 class="section-heading text-uppercase">About DH.arc + the Webinar</h2>
           <h3 class="section-subheading mb-3">An opportunity to learn more about what is going on at /DH.arc</h3>
-          <p style="text-align:left;">Some information some information  some information some information some information some information some information some information some information</p>
-
+          <p style="text-align:left;">The Digital Humanities Advanced Research Centre (/DH.arc) is part of the Department of Classical Philology and Italian Studies (FICLIT), that connects students, researchers, IT staff, and professors from FICLIT, the Department of Computer Science and Engineering (DISI) within the University of Bologna, and affiliated structures. The Centre supports scholars and institutions in designing, developing, and maintaining DH research projects. The aim is to be a hub for researchers and agencies currently working in the field of DH, and to promote innovative projects in the Humanities. /DH.arc is a platform wherein to foster collaborations, exchange ideas, discuss approaches and experiences, and train for DH skills.</p>
+          <p style="text-align:left;">This webinar will focus on presenting the latest /DH.arc's short research projects (< 12 months). These projects tackle research questions arisen by scholars that require an interdisciplinary approach for solving problems. Projects are defined and developed collaboratively and must include innovative research topics and methodologies for creating new knowledge.</p>
         </div>
       </div>
 
@@ -98,15 +98,15 @@
         <div class="col-md">
           <span class="fa-stack fa-3x">
             <i class="fas fa-circle fa-stack-2x research"></i>
-            <i class="fas fa-search fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-calendar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading"></h4>
           <p class="text-muted">When: <br> 12 June, 10am-12pm </p>
         </div>
         <div class="col-md">
           <span class="fa-stack fa-3x">
-            <i class="fas fa-circle fa-stack-2x editing"></i>
-            <i class="fas fa-book fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-circle fa-stack-2x research"></i>
+            <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading"></h4>
           <p class="text-muted">Where:<br> Youtube Live</p>
@@ -115,11 +115,19 @@
     </div>
 
     <!--Fabio -->
-    <div class="container" id="fabio">
+    <div id="allprojects">
+      <div class="container" id="featured">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="section-heading text-uppercase">FEATURED PROJECTS</h2>
+          </div>
+      </div>
+    </div>
+      <div class="container" id="fabio">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-heading text-uppercase">DHDKey! A dataset of projects</h2>
           <hr>
+          <h2 class="section-heading text-uppercase">DHDKey! A dataset of projects</h2>
           <h3 class="section-subheading mb-3">by Fabio Mariani</h3>
           <p style="text-align:left;">Here goes information about this project.</p>
           <p style="text-align:left;">Here goes information about this project.</p>
@@ -180,6 +188,7 @@
         </div>
       </div>
     </div>
+  </div>
 
 <!-- Team -->
 <section class="page-section" id="team">
