--- a/index.html
+++ b/index.html
@@ -76,20 +76,20 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading text-uppercase">/DH.arc projects’ presentations</div>
-        <div class="intro-lead-in">Webinar for projects realized by DHDK students, now graduated, by using the DHDK grants for research activities.</div>
+        <div class="intro-heading text-uppercase">/DH.arc projects' presentations</div>
+        <div class="intro-lead-in">Learn more about projects realized by now graduated DHDK students, completed through the DHDK grants for research activities.</div>
       </div>
     </div>
   </header>
 
-  <!-- When and Where -->
+  <!-- About -->
   <section class="page-section" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-heading text-uppercase">About DH.arc + the Webinar</h2>
+          <h2 class="section-heading text-uppercase">About /DH.arc + the Webinar</h2>
           <h3 class="section-subheading mb-3">An opportunity to learn more about what is going on at /DH.arc</h3>
-          <p style="text-align:left;">The Digital Humanities Advanced Research Centre (/DH.arc) is part of the Department of Classical Philology and Italian Studies (FICLIT), that connects students, researchers, IT staff, and professors from FICLIT, the Department of Computer Science and Engineering (DISI) within the University of Bologna, and affiliated structures. The Centre supports scholars and institutions in designing, developing, and maintaining DH research projects. The aim is to be a hub for researchers and agencies currently working in the field of DH, and to promote innovative projects in the Humanities. /DH.arc is a platform wherein to foster collaborations, exchange ideas, discuss approaches and experiences, and train for DH skills.</p>
+          <p style="text-align:left;"><a href="https://centri.unibo.it/dharc/en/centre/centre-description">The Digital Humanities Advanced Research Centre</a> (/DH.arc) is part of the Department of Classical Philology and Italian Studies (FICLIT), that connects students, researchers, IT staff, and professors from FICLIT, the Department of Computer Science and Engineering (DISI) within the University of Bologna, and affiliated structures. The Centre supports scholars and institutions in designing, developing, and maintaining DH research projects. The aim is to be a hub for researchers and agencies currently working in the field of DH, and to promote innovative projects in the Humanities. /DH.arc is a platform wherein to foster collaborations, exchange ideas, discuss approaches and experiences, and train for DH skills.</p>
           <p style="text-align:left;">This webinar will focus on presenting the latest /DH.arc's short research projects (< 12 months). These projects tackle research questions arisen by scholars that require an interdisciplinary approach for solving problems. Projects are defined and developed collaboratively and must include innovative research topics and methodologies for creating new knowledge.</p>
         </div>
       </div>
@@ -114,7 +114,8 @@
       </div>
     </div>
 
-    <!--Fabio -->
+
+    <!--featured projects-->
     <div id="allprojects">
       <div class="container" id="featured">
         <div class="row">
@@ -122,13 +123,16 @@
             <h2 class="section-heading text-uppercase">FEATURED PROJECTS</h2>
           </div>
       </div>
+
+    <!--Fabio -->
     </div>
-      <div class="container" id="fabio">
+      <div class="container project" id="fabio">
       <div class="row">
         <div class="col-lg-12">
           <hr>
           <h2 class="section-heading text-uppercase">DHDKey! A dataset of projects</h2>
           <h3 class="section-subheading mb-3">by Fabio Mariani</h3>
+          <hr>
           <p style="text-align:left;">Here goes information about this project.</p>
           <p style="text-align:left;">Here goes information about this project.</p>
           <p style="text-align:left;">Here goes information about this project.</p>
@@ -143,9 +147,10 @@
     <div class="container project" id="martina">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-heading text-uppercase">Philoeditor</h2>
           <hr>
+          <h2 class="section-heading text-uppercase">Philoeditor Web interface and services</h2>
           <h3 class="section-subheading mb-3">by Martina Dello Buono</h3>
+          <hr>
           <p style="text-align:left;">PhiloEditor® is a web application for the identification, representation and markup of diachronic variants of different editions of literary texts according to a set of parameters provided by scholars, in order to create Scholarly Digital Editions characterized by complex and multidimensional diachronic interpretative paths.</p>
           <p style="text-align:left;">PhiloEditor® currently makes available two editions of <i>I promessi sposi</i> by Alessandro Manzoni (editions of 1825-1827 and 1840-1842), and two editions of <i>Le Avventure di Pinocchio</i> by Carlo Collodi (editions of 1881-1883 and 1983).</p>
           <p style="text-align:left;">They are accessible in three different modes on the user-side, namely: Reading Mode, Variants Mode and Laboratory Mode. The Reading Mode allows users to read a single full-text edition of a literary text on an interface designed for reading. In the Variants Mode, it is possible to compare the editions of the available literary texts by visualizing their variants automatically detected by the system. Finally, the Laboratory Mode provides users with interactive tools for creating their own edition of a text by customizing annotations and assigning specific categories to the variants, and for downloading its corresponding XML/TEI version.</p>
@@ -157,13 +162,14 @@
     </div>
 
 
-    <!--Martina -->
-    <div class="container" id="sebastian">
+    <!--sebastian -->
+    <div class="container project" id="sebastian">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-heading text-uppercase">Visualizing semantic digital editions: The case of Vespasiano da Bisticci's Letters</h2>
           <hr>
+          <h2 class="section-heading text-uppercase">Reproducibility of semantic digital editions: <br>The case of Vespasiano da Bisticci's Letters</h2>
           <h3 class="section-subheading mb-3">by Sebastian Barzaghi</h3>
+          <hr>
           <p style="text-align:left;">Vespasiano da Bisticci’s Letters are a series of manuscript letters sent to and received by Vespasiano da Bisticci (1421–1498), an Italian humanist and librarian, within a time period spanning from 1444 to 1497. Their content focuses mostly on manuscripts and codex trade with other notable people of that time. A semantic digital edition of the Letters has been produced in order to facilitate the navigation, study and conservation of such documents, as well as to contextualize them in a semantically-rich and metatextual framework. Overall, many data elements have been used to formulate descriptive paratextual statements about the letters in the annotation process that brought the semantic digital edition to life.</p>
           <p style="text-align:left;">There are many alternative ways to explore semantic-rich data, each with varying levels of effectiveness. A flat index, albeit useful as a starting point to display and navigate data more efficiently, tends to collapse the depth of the data itself and to hide its most important characteristics. Instead, it may be more effective to adopt an approach based on multiple visualization strategies which support a much better sense-making of data through the use of charts and other visual elements that provide an accessible way to see and understand correlations and patterns in data.</p>
           <p style="text-align:left;">Access the website for the project <a href="">here</a>!</p>
@@ -174,12 +180,13 @@
 
 
     <!--Valentina -->
-    <div class="container" id="valentina">
+    <div class="container project" id="valentina">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-heading text-uppercase">VASTO project, development of the application</h2>
           <hr>
+          <h2 class="section-heading text-uppercase">VASTO project, development of the application</h2>
           <h3 class="section-subheading mb-3">by Valentina Pasqual</h3>
+          <hr>
           <p style="text-align:left;">Here goes information about this project.</p>
           <p style="text-align:left;">Here goes information about this project.</p>
           <p style="text-align:left;">Here goes information about this project.</p>
@@ -196,7 +203,6 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">The research team</h2>
-          <hr>
           <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
@@ -206,13 +212,6 @@
             <img class="mx-auto rounded-circle" src="img/team/martina.jpg" alt="">
             <p class="text-muted">Martina Dello Buono<br>
             <a href="mailto:martina.dellobuono@studio.unibo.it">martina.dellobuono@studio.unibo.it </a></p>
-            <ul class="list-inline team-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/???????/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
         <div class="col-sm-3">
@@ -220,13 +219,6 @@
             <img class="mx-auto rounded-circle" src="img/team/fabio.jpg" alt="">
             <p class="text-muted">Fabio Mariani<br>
             <a href="mailto:fabio.mariani6@studio.unibo.it's email">fabio.mariani6@studio.unibo.it</a></p>
-            <ul class="list-inline team-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/????/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
         <div class="col-sm-3">
@@ -234,13 +226,6 @@
             <img class="mx-auto rounded-circle" src="img/team/sebastian.jpg" alt="">
             <p class="text-muted">Sebastian Barzaghi<br>
             <a href="mailto:sebastian.barzaghi@studio.unibo.it">sebastian.barzaghi@studio.unibo.it</a></p>
-            <ul class="list-inline team-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/?????/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
 
@@ -249,13 +234,6 @@
             <img class="mx-auto rounded-circle" src="img/team/valentina.jpg" alt="">
             <p class="text-muted">Valentina Pasqual<br>
             <a href="mailto:valentina.pasqual@studio.unibo.it">valentina.pasqual@studio.unibo.it</a></p>
-            <ul class="list-inline team-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/????/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
 
@@ -275,7 +253,7 @@
       <div class="row align-items-center">
         <div class="col-md-4">
           <img src="img/logos/logo_unibo2.png" height="60px" alt="">
-          <span class="copyright">Copyright &copy; Digital Humanities Advanced Research Centre (/DH.arc)</span>
+          <span class="copyright">Copyright &copy; /DH.arc</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
