--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
           <h2 class="section-heading text-uppercase">DHDKey! A dataset of projects</h2>
           <h3 class="section-subheading mb-3">by Fabio Mariani</h3>
           <hr>
-          <p style="text-align:left;">Here goes information about this project.</p>
-          <p style="text-align:left;">Here goes information about this project.</p>
-          <p style="text-align:left;">Here goes information about this project.</p>
+          <p style="text-align:left;">DHDKey! (Digital Humanitites and Digital Knowledge Educational Yearbook) is an online database devoted to the collection and publication of metadata of all projects developed by students of the master course of Digital Humanitites and Digital Knowledge at the University of Bologna. DHDKey! is a platform developed and managed by students for students.</p>
+          <p style="text-align:left;">The idea behind DHDKey! is not only to organize all the projects carried out during the course in a historical collection, but also to provide all students of the course with their own academic portfolio.</p>
+          <p style="text-align:left;">All students of the Digital Humanities and Digital Knowledge course can upload their project data through the appropriate form provided by the website.</p>
           <p style="text-align:left;">Access the website for the project <a href="">here</a>!</p>
           <p style="text-align:left;">Access the live webinar <a href="">here</a>!</p>
         </div>
