--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
           <p style="text-align:left;">DHDKey! (Digital Humanitites and Digital Knowledge Educational Yearbook) is an online database devoted to the collection and publication of metadata of all projects developed by students of the master course of Digital Humanitites and Digital Knowledge at the University of Bologna. DHDKey! is a platform developed and managed by students for students.</p>
           <p style="text-align:left;">The idea behind DHDKey! is not only to organize all the projects carried out during the course in a historical collection, but also to provide all students of the course with their own academic portfolio.</p>
           <p style="text-align:left;">All students of the Digital Humanities and Digital Knowledge course can upload their project data through the appropriate form provided by the website.</p>
-          <p style="text-align:left;">Access the website for the project <a href="">here</a>!</p>
-          <p style="text-align:left;">Access the live webinar <a href="">here</a>!</p>
+          <p style="text-align:left;">Access the website for the project <a href="">here</a>.</p>
         </div>
       </div>
     </div>
@@ -155,8 +154,7 @@
           <p style="text-align:left;">PhiloEditor® currently makes available two editions of <i>I promessi sposi</i> by Alessandro Manzoni (editions of 1825-1827 and 1840-1842), and two editions of <i>Le Avventure di Pinocchio</i> by Carlo Collodi (editions of 1881-1883 and 1983).</p>
           <p style="text-align:left;">They are accessible in three different modes on the user-side, namely: Reading Mode, Variants Mode and Laboratory Mode. The Reading Mode allows users to read a single full-text edition of a literary text on an interface designed for reading. In the Variants Mode, it is possible to compare the editions of the available literary texts by visualizing their variants automatically detected by the system. Finally, the Laboratory Mode provides users with interactive tools for creating their own edition of a text by customizing annotations and assigning specific categories to the variants, and for downloading its corresponding XML/TEI version.</p>
           <p style="text-align:left;">From a technical point of view, PhiloEditor® relies on a customized HTML5 subset, based on a theory of well-formed XML design models and easily convertible in XML/TEI or any other XML vocabulary.</p>
-          <p style="text-align:left;">Access the website for the project <a href="">here</a>!</p>
-          <p style="text-align:left;">Access the live webinar <a href="">here</a>!</p>
+          <p style="text-align:left;">Access the website for the project <a href="http://projects.dharc.unibo.it/philoeditor/">here</a>.</p>
         </div>
       </div>
     </div>
@@ -172,8 +170,7 @@
           <hr>
           <p style="text-align:left;">Vespasiano da Bisticci’s Letters are a series of manuscript letters sent to and received by Vespasiano da Bisticci (1421–1498), an Italian humanist and librarian, within a time period spanning from 1444 to 1497. Their content focuses mostly on manuscripts and codex trade with other notable people of that time. A semantic digital edition of the Letters has been produced in order to facilitate the navigation, study and conservation of such documents, as well as to contextualize them in a semantically-rich and metatextual framework. Overall, many data elements have been used to formulate descriptive paratextual statements about the letters in the annotation process that brought the semantic digital edition to life.</p>
           <p style="text-align:left;">There are many alternative ways to explore semantic-rich data, each with varying levels of effectiveness. A flat index, albeit useful as a starting point to display and navigate data more efficiently, tends to collapse the depth of the data itself and to hide its most important characteristics. Instead, it may be more effective to adopt an approach based on multiple visualization strategies which support a much better sense-making of data through the use of charts and other visual elements that provide an accessible way to see and understand correlations and patterns in data.</p>
-          <p style="text-align:left;">Access the website for the project <a href="">here</a>!</p>
-          <p style="text-align:left;">Access the live webinar <a href="">here</a>!</p>
+          <p style="text-align:left;">Access the website for the project <a href="">here</a>.</p>
         </div>
       </div>
     </div>
@@ -190,8 +187,7 @@
           <p style="text-align:left;">Here goes information about this project.</p>
           <p style="text-align:left;">Here goes information about this project.</p>
           <p style="text-align:left;">Here goes information about this project.</p>
-          <p style="text-align:left;">Access the website for the project <a href="">here</a>!</p>
-          <p style="text-align:left;">Access the live webinar <a href="">here</a>!</p>
+          <p style="text-align:left;">Access the website for the project <a href="">here</a>.</p>
         </div>
       </div>
     </div>
