--- a/index.html
+++ b/index.html
@@ -184,10 +184,9 @@
           <h2 class="section-heading text-uppercase">VASTO project, development of the application</h2>
           <h3 class="section-subheading mb-3">by Valentina Pasqual</h3>
           <hr>
-          <p style="text-align:left;">Here goes information about this project.</p>
-          <p style="text-align:left;">Here goes information about this project.</p>
-          <p style="text-align:left;">Here goes information about this project.</p>
-          <p style="text-align:left;">Access the website for the project <a href="">here</a>.</p>
+          <p style="text-align:left;">VaSto Project is part of /DH.arc activity of Bologna University, and is the result of the collaboration between Bologna University, Concordia University and Carisbo.</p>
+          <p style="text-align:left;">VaSto Project works in the digital genetic edition of Benedetto Varchi’s (1503-1565) <i>Storia Fiorentina</i>. It focuses on the author’s last will and the late censorship of Baldini. The Corsinian Codex 1532 of “Biblioteca Nazionale dei Lincei e Corsiniana” in Rome (= RC4) has been chosen for VaSto Project pilot version. This witness presents Varchi’s hand together with Baldini’s late censoreship. The edition has been encoded in XML/TEI and visualised with EVT2 (beta2). It allows for the visualisation of stratigraphic interventions by the author, editor and censor. The digital edition in VaSto Project is a collaborative and genetic edition, diplomatic and critic, with some trans-editional features (i.e. people, places, dates).</p>
+          <p style="text-align:left;">This project is ongoing.</p>
         </div>
       </div>
     </div>
