--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             <i class="fa fa-calendar fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading"></h4>
-          <p class="text-muted">When: <br> 12 June, 10am-12pm </p>
+          <p class="text-muted">WHEN</p>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">12 June, 10am-12pm </a>
         </div>
         <div class="col-md">
           <span class="fa-stack fa-3x">
@@ -109,7 +110,9 @@
             <i class="fa fa-location-arrow fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading"></h4>
-          <p class="text-muted">Where:<br> Youtube Live</p>
+          <p class="text-muted">WHERE</p>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./live.html">Youtube Live!</a>
+
         </div>
       </div>
     </div>
@@ -204,31 +207,27 @@
       <div class="row our-team">
         <div class="col">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/martina.jpg" alt="">
             <p class="text-muted">Martina Dello Buono<br>
-            <a href="mailto:martina.dellobuono@studio.unibo.it">martina.dellobuono@studio.unibo.it </a></p>
+            <a class="emailaddress" href="mailto:martina.dellobuono@studio.unibo.it">martina.dellobuono@studio.unibo.it </a></p>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/fabio.jpg" alt="">
             <p class="text-muted">Fabio Mariani<br>
-            <a href="mailto:fabio.mariani6@studio.unibo.it's email">fabio.mariani6@studio.unibo.it</a></p>
+            <a class="emailaddress" href="mailto:fabio.mariani6@studio.unibo.it's email">fabio.mariani6@studio.unibo.it</a></p>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/sebastian.jpg" alt="">
             <p class="text-muted">Sebastian Barzaghi<br>
-            <a href="mailto:sebastian.barzaghi@studio.unibo.it">sebastian.barzaghi@studio.unibo.it</a></p>
+            <a class="emailaddress" href="mailto:sebastian.barzaghi@studio.unibo.it">sebastian.barzaghi@studio.unibo.it</a></p>
           </div>
         </div>
 
          <div class="col-sm-3">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/valentina.jpg" alt="">
             <p class="text-muted">Valentina Pasqual<br>
-            <a href="mailto:valentina.pasqual@studio.unibo.it">valentina.pasqual@studio.unibo.it</a></p>
+            <a class="emailaddress" href="mailto:valentina.pasqual@studio.unibo.it">valentina.pasqual@studio.unibo.it</a></p>
           </div>
         </div>
 
