--- a/live.html
+++ b/live.html
@@ -95,13 +95,13 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer live-version">
+  <footer class="footer">
     <div class="container">
 
       <div class="row align-items-center">
         <div class="col-md-4">
           <img src="img/logos/logo_unibo2.png" height="60px" alt="">
-          <span class="copyright">Copyright &copy; Digital WHOmanities 2020</span>
+          <span class="copyright">Copyright &copy; /DH.arc</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -121,7 +121,7 @@
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="https://www.unibo.it/it/ateneo/privacy-e-note-legali/privacy/privacy-sistema-portale-ateneo">Informativa sulla Privacy</a>
-              <p>Questo evento è finanziato dal progetto 'Dipartimento di Eccellenza MIUR' (L. 232 del 1/12/2016)</p>
+              <p>Website by Delfina Sol Pandiani.</p>
             </li>
 
 
