--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.youtube.com/channel/UCOVCBjlRRaShRctrw8sfJoQ/featured" target="_blank">
+              <a href="https://www.youtube.com/channel/UCXBWiWr6GVgEyEz0AOWM92g?view_as=subscriber" target="_blank">
                 <i class="fab fa-youtube"></i>
               </a>
             </li>
