--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </span>
           <h4 class="service-heading"></h4>
           <p class="text-muted">WHEN</p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">12 June, 10am-12pm </a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">12 June, 10am-12.30pm </a>
         </div>
         <div class="col-md">
           <span class="fa-stack fa-3x">
@@ -111,7 +111,7 @@
           </span>
           <h4 class="service-heading"></h4>
           <p class="text-muted">WHERE</p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./live.html">Youtube Live!</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./index.html#livestream">Youtube Live!</a>
 
         </div>
       </div>
@@ -195,6 +195,40 @@
     </div>
   </div>
 
+
+  <!-- Livestream -->
+  <section class="page-section live" id="livestream">
+    <div class="container">
+      <div id="livestreamdiv">
+        <div class="container" id="livetitle">
+          <div class="row">
+            <div class="col-lg-12">
+              <h2 class="section-heading text-uppercase" id="watchlive">WATCH LIVE!</h2>
+            </div>
+        </div>
+      <div class="row">
+        <div class="col-md col-live">
+            <h2 class="section-heading text-uppercase">June 12th, 2020</h2>
+            <ul>
+                <li>10:00AM - <b>Francesca Tomasi</b>, Introduction to /DH.arc and its projects.</li>
+                <li>10:15AM - <b>Fabio Mariani</b>, <i>DHDKey! A dataset of projects.</i></li>
+                <li>10:45AM - <b>Martina Dello Buono</b>, <i>Philoeditor Web interface and services.</i></li>
+                <li>11:15AM - <b>Sebastian Barzaghi</b>, <i>Reproducibility of semantic digital editions: The case of Vespasiano da Bisticci's Letters.</i></li>
+                <li>11:45AM - <b>Valentina Pasqual</b>, <i>VASTO project, development of the application.</i></li>
+                <li>12:15PM - Open discussion with /DH.arc members.</li>
+            </ul>
+          </div>
+        <div class="col-md">
+          <div class="youtube-responsive-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/viwouZZVmJA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+
 <!-- Team -->
 <section class="page-section" id="team">
     <div class="container">
@@ -205,27 +239,33 @@
         </div>
       </div>
       <div class="row our-team">
+
+        <div class="col">
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="img/team/martina.jpg" alt="">
+              <p class="text-muted">Martina Dello Buono<br>
+                <a class="emailaddress" href="mailto:martina.dellobuono@studio.unibo.it">martina.dellobuono@studio.unibo.it </a></p>
+            </div>
+          </div>
+
         <div class="col">
           <div class="team-member">
-            <p class="text-muted">Martina Dello Buono<br>
-            <a class="emailaddress" href="mailto:martina.dellobuono@studio.unibo.it">martina.dellobuono@studio.unibo.it </a></p>
-          </div>
-        </div>
-        <div class="col-sm-3">
-          <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/fabio.jpg" alt="">
             <p class="text-muted">Fabio Mariani<br>
             <a class="emailaddress" href="mailto:fabio.mariani6@studio.unibo.it's email">fabio.mariani6@studio.unibo.it</a></p>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col">
           <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/sebastian.jpg" alt="">
             <p class="text-muted">Sebastian Barzaghi<br>
             <a class="emailaddress" href="mailto:sebastian.barzaghi@studio.unibo.it">sebastian.barzaghi@studio.unibo.it</a></p>
           </div>
         </div>
 
-         <div class="col-sm-3">
+         <div class="col">
           <div class="team-member">
+            <img class="mx-auto rounded-circle" src="img/team/valentina.jpg" alt="">
             <p class="text-muted">Valentina Pasqual<br>
             <a class="emailaddress" href="mailto:valentina.pasqual@studio.unibo.it">valentina.pasqual@studio.unibo.it</a></p>
           </div>
@@ -247,7 +287,7 @@
       <div class="row align-items-center">
         <div class="col-md-4">
           <img src="img/logos/logo_unibo2.png" height="60px" alt="">
-          <span class="copyright">Copyright &copy; /DH.arc</span>
+          <span class="copyright">Copyright &copy; /DH.arc 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
