--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <div class="container">
+    <div class="container menuback">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <img src="img/logos/logo_dharc.png" height="50" alt="">
       </a>
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-heading text-uppercase">/DH.arc projects' presentations</div>
-        <div class="intro-lead-in">Learn more about projects realized by now graduated DHDK students, completed through the DHDK grants for research activities.</div>
+        <div class="col-6 intro-lead-in">Learn more about projects realized by now graduated DHDK students, completed through the DHDK grants for research activities.</div>
       </div>
     </div>
   </header>
