--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </span>
           <h4 class="service-heading"></h4>
           <p class="text-muted">WHEN</p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger">12 June, 10am-12.30pm </a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger datea">12 June, 10am-12.30pm </a>
         </div>
         <div class="col-md">
           <span class="fa-stack fa-3x">
