--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
 
       <div class="row text-center">
-        <div class="col-md">
+        <div class="col-md when">
           <span class="fa-stack fa-3x">
             <i class="fas fa-circle fa-stack-2x research"></i>
             <i class="fa fa-calendar fa-stack-1x fa-inverse"></i>
