--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <p style="text-align:left;">DHDKey! (Digital Humanitites and Digital Knowledge Educational Yearbook) is an online database devoted to the collection and publication of metadata of all projects developed by students of the master course of Digital Humanitites and Digital Knowledge at the University of Bologna. DHDKey! is a platform developed and managed by students for students.</p>
           <p style="text-align:left;">The idea behind DHDKey! is not only to organize all the projects carried out during the course in a historical collection, but also to provide all students of the course with their own academic portfolio.</p>
           <p style="text-align:left;">All students of the Digital Humanities and Digital Knowledge course can upload their project data through the appropriate form provided by the website.</p>
-          <p style="text-align:left;">Access the website for the project <a href="">here</a>.</p>
+          <p style="text-align:left;">Access the website for the project <a href="https://projects.dharc.unibo.it/dhdkey/">here</a>.</p>
         </div>
       </div>
     </div>
@@ -173,7 +173,7 @@
           <hr>
           <p style="text-align:left;">Vespasiano da Bisticci’s Letters are a series of manuscript letters sent to and received by Vespasiano da Bisticci (1421–1498), an Italian humanist and librarian, within a time period spanning from 1444 to 1497. Their content focuses mostly on manuscripts and codex trade with other notable people of that time. A semantic digital edition of the Letters has been produced in order to facilitate the navigation, study and conservation of such documents, as well as to contextualize them in a semantically-rich and metatextual framework. Overall, many data elements have been used to formulate descriptive paratextual statements about the letters in the annotation process that brought the semantic digital edition to life.</p>
           <p style="text-align:left;">There are many alternative ways to explore semantic-rich data, each with varying levels of effectiveness. A flat index, albeit useful as a starting point to display and navigate data more efficiently, tends to collapse the depth of the data itself and to hide its most important characteristics. Instead, it may be more effective to adopt an approach based on multiple visualization strategies which support a much better sense-making of data through the use of charts and other visual elements that provide an accessible way to see and understand correlations and patterns in data.</p>
-          <p style="text-align:left;">Access the website for the project <a href="">here</a>.</p>
+          <p style="text-align:left;">Access the website for the project <a href="https://dharc-org.github.io/vespasiano-da-bisticci-letters-de/documentation/index.html">here</a>.</p>
         </div>
       </div>
     </div>
@@ -189,7 +189,7 @@
           <hr>
           <p style="text-align:left;">VaSto Project is part of /DH.arc activity of Bologna University, and is the result of the collaboration between Bologna University, Concordia University and Carisbo.</p>
           <p style="text-align:left;">VaSto Project works in the digital genetic edition of Benedetto Varchi’s (1503-1565) <i>Storia Fiorentina</i>. It focuses on the author’s last will and the late censorship of Baldini. The Corsinian Codex 1532 of “Biblioteca Nazionale dei Lincei e Corsiniana” in Rome (= RC4) has been chosen for VaSto Project pilot version. This witness presents Varchi’s hand together with Baldini’s late censoreship. The edition has been encoded in XML/TEI and visualised with EVT2 (beta2). It allows for the visualisation of stratigraphic interventions by the author, editor and censor. The digital edition in VaSto Project is a collaborative and genetic edition, diplomatic and critic, with some trans-editional features (i.e. people, places, dates).</p>
-          <p style="text-align:left;">This project is ongoing.</p>
+          <p style="text-align:left;">Access the website for the project <a href="https://valentinapasqual.github.io/ProgettoVasto/">here</a>.</p>
         </div>
       </div>
     </div>
