--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
           </span>
           <h4 class="service-heading"></h4>
           <p class="text-muted">WHERE</p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./index.html#livestream">Youtube Live!</a>
-
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./index.html#livestream">Youtube and Facebook Live!</a>
         </div>
       </div>
     </div>
@@ -217,10 +216,11 @@
                 <li>11:45AM - <b>Valentina Pasqual</b>, <i>VASTO project, development of the application.</i></li>
                 <li>12:15PM - Open discussion with /DH.arc members.</li>
             </ul>
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www.facebook.com/DHDK.unibo/videos/1190417037976559/">Also on Facebook Live!</a>
+
           </div>
         <div class="col-md">
-          <div class="youtube-responsive-container"><iframe width="560" height="315" src="https://youtube.com/embed/L0jETD-pz34" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-
+          <div class="youtube-responsive-container"><iframe width="560" height="315" src="https://youtube.com/embed/xd2y-DC8G9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
       </div>
 
