--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <hr>
           <p style="text-align:left;">VaSto Project is part of /DH.arc activity of Bologna University, and is the result of the collaboration between Bologna University, Concordia University and Carisbo.</p>
           <p style="text-align:left;">VaSto Project works in the digital genetic edition of Benedetto Varchi’s (1503-1565) <i>Storia Fiorentina</i>. It focuses on the author’s last will and the late censorship of Baldini. The Corsinian Codex 1532 of “Biblioteca Nazionale dei Lincei e Corsiniana” in Rome (= RC4) has been chosen for VaSto Project pilot version. This witness presents Varchi’s hand together with Baldini’s late censoreship. The edition has been encoded in XML/TEI and visualised with EVT2 (beta2). It allows for the visualisation of stratigraphic interventions by the author, editor and censor. The digital edition in VaSto Project is a collaborative and genetic edition, diplomatic and critic, with some trans-editional features (i.e. people, places, dates).</p>
-          <p style="text-align:left;">Access the website for the project <a href="https://valentinapasqual.github.io/ProgettoVasto/">here</a>.</p>
+          <p style="text-align:left;">Access the website for the project <a href="https://dharc-org.github.io/progetto-vasto/">here</a>.</p>
         </div>
       </div>
     </div>
