--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
           <p style="text-align:left;">DHDKey! (Digital Humanitites and Digital Knowledge Educational Yearbook) is an online database devoted to the collection and publication of metadata of all projects developed by students of the master course of Digital Humanitites and Digital Knowledge at the University of Bologna. DHDKey! is a platform developed and managed by students for students.</p>
           <p style="text-align:left;">The idea behind DHDKey! is not only to organize all the projects carried out during the course in a historical collection, but also to provide all students of the course with their own academic portfolio.</p>
           <p style="text-align:left;">All students of the Digital Humanities and Digital Knowledge course can upload their project data through the appropriate form provided by the website.</p>
+          <p style="text-align:left;">This presentation will be followed by a discussion with Silvio Peroni.</p>
           <p style="text-align:left;">Access the website for the project <a href="https://projects.dharc.unibo.it/dhdkey/">here</a>.</p>
         </div>
       </div>
@@ -156,6 +157,7 @@
           <p style="text-align:left;">PhiloEditor® currently makes available two editions of <i>I promessi sposi</i> by Alessandro Manzoni (editions of 1825-1827 and 1840-1842), and two editions of <i>Le Avventure di Pinocchio</i> by Carlo Collodi (editions of 1881-1883 and 1983).</p>
           <p style="text-align:left;">They are accessible in three different modes on the user-side, namely: Reading Mode, Variants Mode and Laboratory Mode. The Reading Mode allows users to read a single full-text edition of a literary text on an interface designed for reading. In the Variants Mode, it is possible to compare the editions of the available literary texts by visualizing their variants automatically detected by the system. Finally, the Laboratory Mode provides users with interactive tools for creating their own edition of a text by customizing annotations and assigning specific categories to the variants, and for downloading its corresponding XML/TEI version.</p>
           <p style="text-align:left;">From a technical point of view, PhiloEditor® relies on a customized HTML5 subset, based on a theory of well-formed XML design models and easily convertible in XML/TEI or any other XML vocabulary.</p>
+          <p style="text-align:left;">This presentation will be followed by a discussion with Paola Italia and Fabio Vitali.</p>
           <p style="text-align:left;">Access the website for the project <a href="http://projects.dharc.unibo.it/philoeditor/">here</a>.</p>
         </div>
       </div>
@@ -172,6 +174,7 @@
           <hr>
           <p style="text-align:left;">Vespasiano da Bisticci’s Letters are a series of manuscript letters sent to and received by Vespasiano da Bisticci (1421–1498), an Italian humanist and librarian, within a time period spanning from 1444 to 1497. Their content focuses mostly on manuscripts and codex trade with other notable people of that time. A semantic digital edition of the Letters has been produced in order to facilitate the navigation, study and conservation of such documents, as well as to contextualize them in a semantically-rich and metatextual framework. Overall, many data elements have been used to formulate descriptive paratextual statements about the letters in the annotation process that brought the semantic digital edition to life.</p>
           <p style="text-align:left;">There are many alternative ways to explore semantic-rich data, each with varying levels of effectiveness. A flat index, albeit useful as a starting point to display and navigate data more efficiently, tends to collapse the depth of the data itself and to hide its most important characteristics. Instead, it may be more effective to adopt an approach based on multiple visualization strategies which support a much better sense-making of data through the use of charts and other visual elements that provide an accessible way to see and understand correlations and patterns in data.</p>
+          <p style="text-align:left;">This presentation will be followed by a discussion with Marilena Daquino.</p>
           <p style="text-align:left;">Access the website for the project <a href="https://dharc-org.github.io/vespasiano-da-bisticci-letters-de/documentation/index.html">here</a>.</p>
         </div>
       </div>
@@ -188,6 +191,7 @@
           <hr>
           <p style="text-align:left;">VaSto Project is part of /DH.arc activity of Bologna University, and is the result of the collaboration between Bologna University, Concordia University and Carisbo.</p>
           <p style="text-align:left;">VaSto Project works in the digital genetic edition of Benedetto Varchi’s (1503-1565) <i>Storia Fiorentina</i>. It focuses on the author’s last will and the late censorship of Baldini. The Corsinian Codex 1532 of “Biblioteca Nazionale dei Lincei e Corsiniana” in Rome (= RC4) has been chosen for VaSto Project pilot version. This witness presents Varchi’s hand together with Baldini’s late censoreship. The edition has been encoded in XML/TEI and visualised with EVT2 (beta2). It allows for the visualisation of stratigraphic interventions by the author, editor and censor. The digital edition in VaSto Project is a collaborative and genetic edition, diplomatic and critic, with some trans-editional features (i.e. people, places, dates).</p>
+          <p style="text-align:left;">This presentation will be followed by a discussion with Paola Italia.</p>
           <p style="text-align:left;">Access the website for the project <a href="https://dharc-org.github.io/progetto-vasto/">here</a>.</p>
         </div>
       </div>
@@ -210,11 +214,11 @@
             <h2 class="section-heading text-uppercase">June 12th, 2020</h2>
             <ul>
                 <li>10:00AM - <b>Francesca Tomasi</b>, Introduction to /DH.arc and its projects.</li>
-                <li>10:15AM - <b>Fabio Mariani</b>, <i>DHDKey! A dataset of projects.</i></li>
-                <li>10:45AM - <b>Martina Dello Buono</b>, <i>Philoeditor Web interface and services.</i></li>
-                <li>11:15AM - <b>Sebastian Barzaghi</b>, <i>Reproducibility of semantic digital editions: The case of Vespasiano da Bisticci's Letters.</i></li>
-                <li>11:45AM - <b>Valentina Pasqual</b>, <i>VASTO project, development of the application.</i></li>
-                <li>12:15PM - Open discussion with /DH.arc members.</li>
+                <li>10:15AM - <b>Fabio Mariani</b>, <i>DHDKey! A dataset of projects.</i> Followed by a discussion with Silvio Peroni.</li>
+                <li>10:45AM - <b>Martina Dello Buono</b>, <i>Philoeditor Web interface and services.</i> Followed by a discussion with Paola Italia and Fabio Vitali.</li>
+                <li>11:15AM - <b>Sebastian Barzaghi</b>, <i>Reproducibility of semantic digital editions: The case of Vespasiano da Bisticci's Letters.</i> Followed by a discussion with Marilena Daquino.</li>
+                <li>11:45AM - <b>Valentina Pasqual</b>, <i>VASTO project, development of the application.</i> Followed by a discussion with Paola Italia.</li>
+                <li>12:15PM - Open discussion with /DH.arc members, including Francesca Tomasi, Marilena Daquino, Francesca Giovannetti, Paola Italia, and Fabio Vitali.</li>
             </ul>
             <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www.facebook.com/DHDK.unibo/videos/1190417037976559/">Also on Facebook Live!</a>
 
