--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
           </div>
         <div class="col-md">
-          <div class="youtube-responsive-container"><iframe width="560" height="315" src="https://youtube.com/embed/xd2y-DC8G9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+          <div class="youtube-responsive-container"><iframe width="560" height="315" src="https://youtube.com/watch?v=xd2y-DC8G9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
       </div>
 
