--- a/index.html
+++ b/index.html
@@ -220,12 +220,19 @@
                 <li>11:45AM - <b>Valentina Pasqual</b>, <i>VASTO project, development of the application.</i> Followed by a discussion with Paola Italia.</li>
                 <li>12:15PM - Open discussion with /DH.arc members, including Francesca Tomasi, Marilena Daquino, Francesca Giovannetti, Paola Italia, and Fabio Vitali.</li>
             </ul>
-            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www.facebook.com/DHDK.unibo/videos/1190417037976559/">Also on Facebook Live!</a>
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www.youtube.com/watch?v=xd2y-DC8G9g&t=15s">Also on Youtube Live!</a>
+
+            <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://www.facebook.com/DHDK.unibo/videos/1190417037976559/">Also on Youtube Live!</a> -->
 
           </div>
-        <div class="col-md">
-          <div class="youtube-responsive-container"><iframe width="560" height="315" src="https://youtube.com/watch?v=xd2y-DC8G9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-        </div>
+         <div class="col-md">
+            <div class="youtube-responsive-container">
+              <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FDHDK.unibo%2Fvideos%2F1190417037976559%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+           <!--
+          <iframe width="560" height="315" src="https://youtube.com/watch?v=xd2y-DC8G9g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            -->
+            </div>
+           </div> 
       </div>
 
     </div>
